@@ -34,6 +34,7 @@ Version 1.13.11+dev:
      repeat_on_hold=yes to [default_hotkey].
    * [set_variable] now supports prefix and suffix operations for
      string concatenation.
+   * [effect]apply_to=attack now supports set_range
  * Miscellaneous and bug fixes:
    * Fixed standing animation toggle not taking immediate effect (bug
      #1653).
